--- a/app/page_weblink.css
+++ b/app/page_weblink.css
@@ -1427,11 +1427,10 @@ color: #777;
 .quantity__btn--left {margin-right:auto; padding-left:13px}
 .quantity__btn--right {margin-left:auto; padding-right:13px}
 .quantity__num{flex:1; display:flex; align-items:center; justify-content:center; margin:0 auto; font-size:18px;}
-.cartfoot {display:flex; position:sticky; bottom:80px; width:100%; padding: 10px; background:#f1f5f9; border-top:1px solid #e2e8f0;}
-.cartfoot__btn {flex:1; display: flex; justify-content: center; align-items: center; height: 46px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight:600; cursor: pointer;}
+.cartfoot {display:flex; flex-direction: column; position:sticky; bottom:80px; width:100%; padding: 10px; background:#f1f5f9; border-top:1px solid #e2e8f0;}
+.cartfoot__btn {display: flex; justify-content: center; align-items: center; height: 50px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight:600; cursor: pointer;}
 .cartfoot__btn:hover {text-decoration: none;}
-
-.cartfoot__btn.disabled {background: #e2e8f0; border-radius: 8px; color: #fff; font-size: 18px; font-weight:600; cursor: pointer;}
+.cartfoot__btn.disabled {background: #e2e8f0; border-radius: 8px; color: #afafaf; font-size: 18px; font-weight:600; cursor: pointer;}
 
 
 
@@ -1440,7 +1439,7 @@ color: #777;
 .layer__bg {position:absolute; inset:0; background:rgba(0,0,0,.4);}
 .layer__panel {position:relative; display:flex; flex-direction:column; width:100%; padding: 16px; border-radius:16px; background:#f8fafc; overflow:hidden; z-index:1000}
 .layer__panel--white {background:#fff;}
-.layer__tit {margin-bottom: 8px; font-size:18px; line-height: 1.25; font-weight:700}
+.layer__tit {margin-bottom: 8px; font-size:20px; text-align: center; line-height: 1.25; font-weight:700}
 .layer__close {position:absolute; top:12px; right:12px; fill:#64748b}
 
 /* 공지팝업 */
@@ -1460,7 +1459,7 @@ color: #777;
 
 
 /* 팝업상품상세 */
-.layer__goodsimgbox {overflow: hidden; display: flex; align-items: center; justify-content: center; height: 220px; margin-inline:-16px; border-top:1px solid rgba(0, 0, 0, 0.1); border-bottom:1px solid rgba(0, 0, 0, 0.1);}
+.layer__goodsimgbox {overflow: hidden; display: flex; align-items: center; justify-content: center; height: 220px; margin-inline:-16px;}
 .layer__goodsimgbox img {width: auto; height: 120%;}
 .layer__goodsinfo {display:flex; flex-direction: column;}
 .layer__goodstxt {margin: 8px auto; font-size:14px;}
@@ -1473,6 +1472,17 @@ color: #777;
 .layer__goodsprice {margin: 0 auto; font-size: 30px; font-weight: 800; letter-spacing: -0.7px; color: #fa5252;}
 .layer__goodsname {margin:0 auto; font-size: 18px; font-weight: 600;}
 .layer__goodsbtn {display:flex; align-items: center; justify-content: center; width: 200px; height: 46px; margin:16px auto; border-radius: 8px; font-size: 18px; font-weight: bold; background: #f43f5e;color:#fff}
+
+/* 주문완료 안내 팝업 */
+.layer__orders {display: flex; flex-direction: column; overflow-y: auto; max-height: 400px; background: #fff; padding: 16px; border:1px solid #f9f3f4; border-radius: 8px; font-size: 16px;}
+.layer__tbl {width:100%; border-collapse: collapse; }
+.layer__tbl th {width:90px; padding: 8px 6px; border:1px solid #dfdfdf; border-right: 0; background:#f1f5f9; text-align:left; vertical-align: top; font-weight:normal; color:#64748b; line-height:1}
+.layer__tbl td {padding: 4px 6px; border:1px solid #dfdfdf; border-left: 0; font-size: 16px; line-height:1.2;}
+.layer__btngroup {display:flex; align-items: center; justify-content: center; gap:8px; margin-top:24px;}
+.layer__gobtn {display:flex; align-items:center; justify-content:center; width:140px; height:40px; padding: 0 20px; border:1px solid #cbd5e1; border-radius:3px; font-size: 16px; font-weight:bold; background:#fff; text-decoration:none}
+
+
+
 
 /* 주문내역상세 */
 .ordersdetail {display:flex; flex-direction:column; padding:3px; gap:2px; font-size: 16px;}
@@ -1538,7 +1548,7 @@ color: #777;
 .write__input {width:100%; height: 36px; border:1px solid #cbd5e1; padding:4px 6px; border-radius:4px; font-size:16px; color:#333; background:#f8fafc; box-sizing:border-box}
 .write__input::placeholder {color:#888}
 .write__textarea {width:100%; height: 108px; border:1px solid #cbd5e1; padding:4px 6px; border-radius:4px; font-size:16px; color:#333; background:#f8fafc; box-sizing:border-box}
-.write__btn {width:100px; height:36px; background:#f1f5f9; border:1px solid rgba(0,0,0,.1); color:#333; font-weight:bold; cursor:pointer}
+.write__btn {width:100px; height:36px; background:#fff; border:1px solid rgba(0,0,0,.4); color:#333; font-weight:bold; cursor:pointer}
 .write__select { width:100%; height: 36px; border:1px solid #cbd5e1; margin-top:10px; padding:4px 6px; border-radius:4px; font-size:16px; color:#333; background:#f8fafc; box-sizing:border-box}
 .write__banknum {margin: 10px 0; font-size: 16px;}
 .write__radiogroup {display:flex; flex-direction:column; gap:10px;}
@@ -1549,9 +1559,9 @@ color: #777;
 .write__list li {padding:10px 0; border-bottom:1px solid #e2e8f0;}
 .write__list li:last-child {border: none}
 .write__listinfo {display:grid; grid-template-columns: 60px 1fr 60px; gap: 0 8px; align-items:center;}
-.write__btngroup {display:flex; flex-direction:column; margin-top:30px;}
+/* .write__btngroup {display:flex; flex-direction:column; margin-top:30px;}
 .write__btngroup label {position: relative; display: block; margin:0 10px 0 34px; font-size: 16px;}
-.write__btngroup input[type=checkbox] {position: absolute; top:2px; left: -16px;}
+.write__btngroup input[type=checkbox] {position: absolute; top:2px; left: -16px;} */
 .write__orederbtn {display: flex; justify-content: center; align-items: center; height: 48px; margin:20px 0 50px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight: 600; cursor: pointer;}
 .write__img {grid-row: span 2; width: 60px; height: 60px; object-fit: cover; aspect-ratio:1/1; border-radius: 4px; border:1px solid rgba(0,0,0,.1)}
 .write__name {line-height: 1.2;}
@@ -1561,6 +1571,12 @@ color: #777;
 .write__coupon svg {position: absolute; left:-20px; width:16px; height:16px;}
 .write__cname {font-size:16px;}
 .write__cprice {color:#dc2626; font-size:16px; font-weight:bold; margin-left:auto}
+
+.writefoot {display:flex; flex-direction: column; gap: 6px; width:100%; margin-bottom: 80px; padding: 10px; background:#f1f5f9; border-top:1px solid #e2e8f0;}
+.writefoot__btn {display: flex; justify-content: center; align-items: center; height: 50px; background: #f43f5e; border-radius: 8px; color: #fff; font-size: 18px; font-weight:600; cursor: pointer;}
+.writefoot__btn:hover {text-decoration: none;}
+.writefoot__btn.disabled {background: #e2e8f0; border-radius: 8px; color: #afafaf; font-size: 18px; font-weight:600; cursor: pointer;}
+
 
 
 /* 주문서작성 - 결제정보 */
@@ -1583,9 +1599,9 @@ color: #777;
 .write__info{font-size:16px; color:#333; line-height:1.4; margin-top:15px; border-radius: 6px; background: #f1f5f9; padding: 10px;}
 
 
-/* 주문내역 */
+/* 주문내역 & 쿠폰리스트 */
 .orderslist__info {display: flex; justify-content: center; align-items: center; height: 30px; font-size: 14px; background: #fee2e2; color: #e11d48;}
-.orderslist {display:flex; flex-direction:column; padding:3px; gap:2px;}
+.orderslist,.couponlist {display:flex; flex-direction:column; padding:3px; gap:2px;}
 .ordersitem {position: relative; display: flex; height: 84px; gap: 40px; padding-inline: 12px; border-radius:4px; background:#fff; border:1px solid rgba(0,0,0,.1)}
 .ordersitem:hover {text-decoration: none;}
 .ordersitem__group {flex: 1; display: flex; flex-direction: column; justify-content: center; gap:4px ;}
@@ -1594,5 +1610,7 @@ color: #777;
 .ordersitem__price {display: flex; align-items: center; margin-left:auto; padding-right: 20px; font-size: 16px; font-weight:bold;}
 .ordersitem__icon {position: absolute; top: 0; right: 12px; bottom:0; display: flex; justify-content: center; align-items: center;}
 .ordersitem__icon svg{width: 16px; height: 16px; fill:#cbd5e1;}
-.text__nodata {display:flex; margin: 20px auto; font-size:20px}
+.text__nodata {display:flex; flex-direction: column; align-items: center; margin-block: 80px; font-size:20px; font-weight: 600; color: #868e96;}
+.text__nodata svg { margin-right: 8px; fill:#cbd5e1; width:100px; height:100px; margin-bottom: 20px;}
 
+/* 쿠폰함 */
